2020-08-07  Robby  <robby@periapsis.org>

	* Released Tellico 3.3.2.

2020-08-06  Robby  <robby@periapsis.org>

	* Updated KinoPoisk data source.

2020-08-02  Robby  <robby@periapsis.org>

	* Updated Allocine data source.
	* Updated KNewStuff categories.

2020-07-26  Robby  <robby@periapsis.org>

	* Improved Goodreads importer.

2020-05-31  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.1.
	* Updated Dark Horse Comics data source.

2020-05-30  Robby Stephenson  <robby@periapsis.org>

	* Updated filter dialog to allow matching against equal empty string.

2020-05-27  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with creation date for duplicated entries (Bug 422127).

2020-04-27  Robby Stephenson  <robby@periapsis.org>

	* Tweaked game platform normalization to match "Nintento Game Boy".

2020-04-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed error in ISO-5426 conversion (Bug 420451).

2020-04-22  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.

2020-04-21  Robby Stephenson  <robby@periapsis.org>

	* Updated GiantBomb API endpoint.
	* Updated IBS data source.

2020-04-19  Robby Stephenson  <robby@periapsis.org>

	* Updated kino.de data source.
	* Updated KinoPoisk data source.
	* Updated Kino-Teatr data source.

2020-04-14  Robby Stephenson  <robby@periapsis.org>

	* Updated BiblioShare API end point.

2020-04-12  Robby Stephenson  <robby@periapsis.org>

	* Updated ISO-5426 converter.

2020-04-05  Robby Stephenson  <robby@periapsis.org>

	* Updated z3950fetcher to separate query and response character encoding (Bug 419670).

2020-03-28  Robby Stephenson  <robby@periapsis.org>

	* Improved audio file data importer to use Album Artist (Bug 419348).
	* Added notification if user agent is diabled and data source
	requires it (Bug 419319).

2020-02-28  Robby Stephenson  <robby@periapsis.org>

	* Updated data source endpoint for TheGamesDB.net.

2020-02-26  Robby Stephenson  <robby@periapsis.org>
